--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 	<title>Genius</title>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -19,7 +20,38 @@
 			<div class="game__pad game__pad--tr"></div>
 			<div class="game__pad game__pad--bl"></div>
 			<div class="game__pad game__pad--br"></div>
+
+			<div class="game__options">
+				<h1 class="game__title">Genius <span class="reg">®</span></h1>
+	
+				<div class="gui">
+	
+					<div class="group">
+						<div class="gui__counter">--</div>
+						<p class="gui__label">count</p>
+					</div>
+	
+					<div class="group">
+						<div class="gui__btn gui__btn--start"></div>
+						<p class="gui__label">start</p>
+					</div>
+	
+					<div class="group">
+						<div class="gui__led"></div>
+						<div class="gui__btn gui__btn--strict"></div>
+						<p class="gui__label">strict</p>
+					</div>	
+
+					<div class="group group-large">
+						<p class="gui__label gui__label--switch">ON</p>
+						<div class="gui__btn-switch"></div>
+						<p class="gui__label gui__label--switch">OFF</p>
+					</div>
+				</div>
+			</div>	
 		</div>
+
+
 		<footer>https://github.com/ThiagoCids - 2023</footer>		
 	</div>
 	<script src="js/scripts.js"></script>
