--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 		</div>
 
 
-		<footer>https://github.com/ThiagoCids - 2023</footer>		
+		<footer>
+			<p>Thiago H. Domingues - 2023</p>
+			<a href="https://github.com/ThiagoCids/jogo_js_responsivo_genius" target="_blank" rel="noopener noreferrer"><img src="/img/icon_github.png" alt="icone github"></a>
+			<a href="https://www.linkedin.com/in/thiago-henrique-domingues/" target="_blank" rel="noopener noreferrer"><img src="/img/icon_linkedlin.png" alt="icone linkedin"></a>
+		</footer>		
 	</div>
 	<script src="js/scripts.js"></script>
 
